tests/baselines/reference/templateStringWithEmbeddedArrowFunction.errors.txt
templateStringWithEmbeddedArrowFunction.ts(1,16): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== templateStringWithEmbeddedArrowFunction.ts (1 errors) ====
    var x = `abc${ x => x }def`;
                   ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.